--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/smart-ticketing.iml
+/.idea/vcs.xml
